--- a/css/layout.css
+++ b/css/layout.css
@@ -129,11 +129,10 @@ button{
 
 /* main */
 #container #main{
-  padding-top: 10vh;
   position: relative;
+  padding-top: 25vh;
   z-index: 1;
   width: 100%;
-  height: 100vh;
   text-align: center;
 }
 .container{
@@ -141,7 +140,7 @@ button{
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  height: 100%;
+  margin-bottom: 10vh;
 }
 .text{
   display: flex;
@@ -149,7 +148,7 @@ button{
   align-items: flex-start;
   justify-content: center;
   position: relative;
-  font-size: 14.4rem;
+  font-size: 12rem;
   font-weight: 900;
   letter-spacing: -.025em;
   line-height: 130%;
@@ -182,48 +181,49 @@ button{
 }
 
 /* scroll */
-#main .scroll{
+.scroll{
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
 }
-#main .scroll .mouse{
+.scroll_inner{
   position: relative;
-  width: 25px;
-  height: 50px;
-  border: 2px solid #333;;
+  width: 45px;
+  height: 45px;
+  background: #0b6feb;
   border-radius: 25px;
+  animation: scroll 2s linear infinite;
 }
-#main .scroll .mouse::before{
-  position: absolute;
+.scroll_inner span{
+  display: block;
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.scroll_inner span::after {
   content: '';
-  top: 8px;
-  left: 50%;
-  transform: translate(-50%, 0);
-  width: 10px;
-  height: 10px;
-  background-color: #333;;
-  border-radius: 50%;
-  animation: slide_bottom 2s infinite;
-  -webkit-animation: slide_bottom 2s infinite;
+  display: inline-block;
+  position: absolute;
+  top: 13px;
+  left: 16px;
+  width: 12px;
+  height: 12px;
+  border-top: 2px solid #fff; 
+  border-right: 2px solid #fff;
+  transform: rotate(135deg);
 }
-#main .scroll .scroll_down{
-  margin-top: 10px;
-  font-size: 1.4rem;
-  color: #333;
-}
-@keyframes slide_bottom {
-	to {
-		opacity: 0;
-		top: 35px;
+
+@keyframes scroll {
+	0% {
+		transform: translateY(15px);
 	}
-}
-@-webkit-keyframes slide_bottom {
-	to {
-		opacity: 0;
-		top: 35px;
-	}
+  50% {
+		transform: translateY(0);
+  }
+  100% {
+		transform: translateY(15px);
+  }
 }
 
 /* about */
