--- a/css/mobile.css
+++ b/css/mobile.css
@@ -33,3 +33,19 @@
 		width: 33.33%;
 	}
 }
+
+@media screen and (max-width: 1024px){
+	.text {
+		font-size: 10rem;
+	}
+	
+	#about .profile_wrap {
+		gap: 62px 0;
+		justify-content: space-between;
+	}
+
+	#portfolio .port_list > li {
+		width: 48%;
+	}
+	
+}
