--- a/css/mobile.css
+++ b/css/mobile.css
@@ -39,12 +39,13 @@
 		font-size: 10rem;
 	}
 	
-	#about .profile_wrap {
+	#portfolio .port_list {
 		gap: 62px 0;
 		justify-content: space-between;
 	}
 
 	#portfolio .port_list > li {
+		flex: unset;
 		width: 48%;
 	}
 	
