--- a/css/mobile.css
+++ b/css/mobile.css
@@ -116,6 +116,10 @@
 }
 
 @media screen and (max-width: 640px){
+	#header .header_wrap nav {
+		display: none;
+	}
+	
 	.text {
 		font-size: 5rem;
 	}
